--- a/tutorial2_quantities_and_amounts/index.html
+++ b/tutorial2_quantities_and_amounts/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
   <head>
     <meta charset="utf-8">
-    <title>Interactive Data Visualization Tutorial</title>
+    <title>Tutorial Interactivo</title>
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    Welcome to Interactive Data Visualization Tutorials
-    <script src="../lib/d3.js"></script>
+    Tutorial Interactivo
+    <script></script>
+    <script src="../lib/d3.js">
+    </script>
     <script src="main.js"></script>
   </body>
 </html>
