how things were
changes here and there

--- a/tutorial2_quantities_and_amounts/index.html
+++ b/tutorial2_quantities_and_amounts/index.html
@@ -6,9 +6,11 @@
   </head>
   <body>
     Tutorial Interactivo
+    <div id="barchart"></div>
     <script></script>
     <script src="../lib/d3.js">
     </script>
-    <script src="main.js"></script>
+    <script src="main2.js"></script>
+    <script type="text/javascript">...</script>
   </body>
 </html>
