--- a/tutorial4_timeseries/index2.html
+++ b/tutorial4_timeseries/index2.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     Welcome to Interactive Data Visualization Tutorials
+    
     <label for="dropdown">Filter Selection</label>
     <select id="dropdown" name="dropdown"></select>
-    <div id="d3-container">
-    </div>
+    <div id="d3-container"></div>
     <script src="../lib/d3.js"></script>
-    <script src="main.js"></script>
+    <script src="main2.js"></script>
   </body>
 </html>
